--- a/docs/Журнал работ.md
+++ b/docs/Журнал работ.md
@@ -1,4 +1,7 @@
 Журнал работ
 
-[1](https://github.com/vasiliev-alexey/otus_devops_project/issues/1)
+01.07.2020
+[1](https://github.com/vasiliev-alexey/otus_devops_project/issues/1) - Знакомство с исходными кодами
 Скачать исходные коды. Проссмотеть их. Попробовать позапускать. Загрузить в репозитрий
+
+[2](https://github.com/vasiliev-alexey/otus_devops_project/issues/2) - Контейнеризировать приложение. Локальная сборка и запуск
