--- a/docs/Журнал работ.md
+++ b/docs/Журнал работ.md
@@ -3,5 +3,11 @@
 01.07.2020
 [1](https://github.com/vasiliev-alexey/otus_devops_project/issues/1) - Знакомство с исходными кодами
 Скачать исходные коды. Проссмотеть их. Попробовать позапускать. Загрузить в репозитрий
-
 [2](https://github.com/vasiliev-alexey/otus_devops_project/issues/2) - Контейнеризировать приложение. Локальная сборка и запуск
+[4](https://github.com/vasiliev-alexey/otus_devops_project/issues/4) - Подключить к приложению мониторинг Prometheus + cadvisor
+
+02.07.2020
+Создан CI\CD на оснвании GitHub Actions
+- пайплайн по сборке проекта (пока без пушей)
+- пайплайн по юнит-тестам
+- пайплайн по проверка на покрытие тестами
