--- a/docs/Журнал работ.md
+++ b/docs/Журнал работ.md
@@ -11,3 +11,7 @@
 - пайплайн по сборке проекта (пока без пушей)
 - пайплайн по юнит-тестам
 - пайплайн по проверка на покрытие тестами
+
+
+04.07
+Написаны Helm  чарты  для приложения
