--- a/docs/Журнал работ.md
+++ b/docs/Журнал работ.md
@@ -21,3 +21,12 @@
 
 07.07
 Написаны скрипты деплоя в  k8s
+
+09.08
+Создан и протетсирован helm   chart Prometheus
+
+10.08 
+Наконец то удалось настроить  provision через Helm
+Настроил деплой  helm  char-ов через  terraform
+
+
