--- a/docs/Журнал работ.md
+++ b/docs/Журнал работ.md
@@ -22,11 +22,25 @@
 07.07
 Написаны скрипты деплоя в  k8s
 
-09.08
+09.07
 Создан и протетсирован helm   chart Prometheus
 
-10.08 
+10.07 
 Наконец то удалось настроить  provision через Helm
 Настроил деплой  helm  char-ов через  terraform
 
+11.07
+Настроен деплой дашбордов графаны  через helm-chart  в terraform
+Разобрался и настроил  мониторинг   rabbitmq через  prometheus exporter (надо влючить плагин в RQ)
 
+12.07
+Добавлен экспортер для Mongo
+Разобрался и настроил  мониторинг   Mongo через  prometheus exporter
+Добавлены дашборды  для Mongo и Rabbit в Terraform
+
+
+
+TODO
+Добавить ChatOps  в GitHub Actions
+Добавить сбор логов (посмотерть на Loki)
+Иследовать  вопрос переносимости Helm чартов  для Minikube - возможно  делать радеоемый модуль между  GKE и Minikube
