--- a/docs/Журнал работ.md
+++ b/docs/Журнал работ.md
@@ -27,7 +27,7 @@
 
 10.07 
 Наконец то удалось настроить  provision через Helm
-Настроил деплой  helm  char-ов через  terraform
+Настроил деплой  helm  chart-ов через  terraform
 
 11.07
 Настроен деплой дашбордов графаны  через helm-chart  в terraform
