--- a/docs/Журнал работ.md
+++ b/docs/Журнал работ.md
@@ -45,7 +45,9 @@
 18.07
 Инфраструктурные сервисы мониторинга вынесены в модуль.
 Модуль переиспользован в Terraform  сценариях для Minikube и GKE
+Добавлено централизованое логирование через Fluend + Loki + Grafana -  правда пока без структурирования логов
+
 
 TODO
 Добавить ChatOps  в GitHub Actions
-Добавить сбор логов (посмотерть на Loki)
+Создать докуммент как запустить проект
