--- a/docs/Журнал работ.md
+++ b/docs/Журнал работ.md
@@ -39,8 +39,15 @@
 Добавлены дашборды  для Mongo и Rabbit в Terraform
 
 
+16.07
+Добавлено логирование через Fluentd + Loki + Grafana для Docker-Compose
+
+18.07
+Инфраструктурные сервисы мониторинга вынесены в модуль.
+Модуль переиспользован в Terraform  сценариях для Minikube и GKE
+Добавлено централизованое логирование через Fluend + Loki + Grafana -  правда пока без структурирования логов
+
 
 TODO
 Добавить ChatOps  в GitHub Actions
-Добавить сбор логов (посмотерть на Loki)
-Иследовать  вопрос переносимости Helm чартов  для Minikube - возможно  делать радеоемый модуль между  GKE и Minikube
+Создать докуммент как запустить проект
